--- a/src/pages/en/speakers.astro
+++ b/src/pages/en/speakers.astro
@@ -57,22 +57,18 @@ const schema = {
 
       -->
 
-      <ul
-        class="flex flex-wrap justify-center mt-12 gap-x-32 gap-y-20 px-8"
-      >
+      <ul class="flex flex-wrap justify-center mt-12 gap-x-32 gap-y-20 px-8">
         {
           speakers.map((speaker) => (
             <li>
-              <!--
               <a
                 href={getRelativeLocaleUrl(
                   Astro.currentLocale!,
                   "/speaker/" + speaker.slug
                 )}
               >
-                -->
                 <Speaker speaker={speaker.data} />
-              <!--</a> -->
+              </a>
             </li>
           ))
         }
