--- a/src/pages/en/agenda.astro
+++ b/src/pages/en/agenda.astro
@@ -1,34 +1,34 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import HeaderHero from "../../components/HeaderHero.astro";
-import AgendaComponent from "../../components/Agenda.astro";
+// import AgendaComponent from "../../components/Agenda.astro";
 
-const breaks = [
-  {
-    data: {
-      name: "Launch Break",
-      startDate: "1215",
-      endDate: "1315",
-    },
-    slug: undefined,
-  },
-  {
-    data: {
-      name: "Break",
-      startDate: "1425",
-      endDate: "1455",
-    },
-    slug: undefined,
-  },
-  {
-    data: {
-      name: "Break",
-      startDate: "1605",
-      endDate: "1635",
-    },
-    slug: undefined,
-  },
-];
+// const breaks = [
+//   {
+//     data: {
+//       name: "Launch Break",
+//       startDate: "1215",
+//       endDate: "1315",
+//     },
+//     slug: undefined,
+//   },
+//   {
+//     data: {
+//       name: "Break",
+//       startDate: "1425",
+//       endDate: "1455",
+//     },
+//     slug: undefined,
+//   },
+//   {
+//     data: {
+//       name: "Break",
+//       startDate: "1605",
+//       endDate: "1635",
+//     },
+//     slug: undefined,
+//   },
+// ];
 
 const schema = {
   "@context": "https://schema.org",
