--- a/src/pages/fr/agenda.astro
+++ b/src/pages/fr/agenda.astro
@@ -1,34 +1,34 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import HeaderHero from "../../components/HeaderHero.astro";
-import AgendaComponent from "../../components/Agenda.astro";
+// import AgendaComponent from "../../components/Agenda.astro";
 
-const breaks = [
-  {
-    data: {
-      name: "Pause déjeuner",
-      startDate: "1215",
-      endDate: "1315",
-    },
-    slug: undefined,
-  },
-  {
-    data: {
-      name: "Pause",
-      startDate: "1425",
-      endDate: "1455",
-    },
-    slug: undefined,
-  },
-  {
-    data: {
-      name: "Pause",
-      startDate: "1605",
-      endDate: "1635",
-    },
-    slug: undefined,
-  },
-];
+// const breaks = [
+//   {
+//     data: {
+//       name: "Pause déjeuner",
+//       startDate: "1215",
+//       endDate: "1315",
+//     },
+//     slug: undefined,
+//   },
+//   {
+//     data: {
+//       name: "Pause",
+//       startDate: "1425",
+//       endDate: "1455",
+//     },
+//     slug: undefined,
+//   },
+//   {
+//     data: {
+//       name: "Pause",
+//       startDate: "1605",
+//       endDate: "1635",
+//     },
+//     slug: undefined,
+//   },
+// ];
 
 const schema = {
   "@context": "https://schema.org",
@@ -57,7 +57,7 @@ const schema = {
 <Layout title="Programme" schema={schema}>
   <main>
     <HeaderHero>
-      <span slot="title">Programme</span>
+      <span slot="title">Agenda</span>
     </HeaderHero>
     <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
       <!-- <section class="flex flex-col items-center gap-4">
