--- a/src/pages/fr/venue.astro
+++ b/src/pages/fr/venue.astro
@@ -1,115 +1,143 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import HeaderHero from '../../components/HeaderHero.astro';
+import HeaderHero from "../../components/HeaderHero.astro";
 
 const schema = {
-    "@context": "https://schema.org",
-    "@type": "EventVenue",
-    "name": "Onepoint Nantes",
-    "description": "Rejoignez-nous à Onepoint Nantes, un hub technologique moderne au cœur de l'Ouest de la France.",
-    "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "3 rue Lavoisier",
-        "addressLocality": "Nantes",
-        "addressRegion": "Pays de la Loire",
-        "postalCode": "44300",
-        "addressCountry": "France"
-    },
-    "url": "https://www.onepoint.fr",
-    "telephone": "+33 XXX XXX XXX",
-    "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": "47.209459",
-        "longitude": "-1.5719052"
-    }
-}
+  "@context": "https://schema.org",
+  "@type": "EventVenue",
+  name: "Onepoint Nantes",
+  description:
+    "Rejoignez-nous à Onepoint Nantes, un hub technologique moderne au cœur de l'Ouest de la France.",
+  address: {
+    "@type": "PostalAddress",
+    streetAddress: "3 rue Lavoisier",
+    addressLocality: "Nantes",
+    addressRegion: "Pays de la Loire",
+    postalCode: "44300",
+    addressCountry: "France",
+  },
+  url: "https://www.onepoint.fr",
+  telephone: "+33 XXX XXX XXX",
+  geo: {
+    "@type": "GeoCoordinates",
+    latitude: "47.209459",
+    longitude: "-1.5719052",
+  },
+};
 ---
 
 <Layout title="Lieu de la conférence - Onepoint Nantes" schema={schema}>
-    <main class="max-w-7xl mx-auto px-4 py-8">
-        <HeaderHero>
-            <span slot="title">Lieu de la conférence</span>
-            <span slot="description">Rejoignez-nous à Nantes, une ville dynamique connue pour son riche patrimoine et sa communauté tech. Notre lieu de conférence offre un cadre idéal pour l'apprentissage et le networking au cœur de l'Ouest de la France.</span>
-        </HeaderHero>
+  <main>
+    <HeaderHero>
+      <span slot="title">Lieu de la conférence</span>
+      <span slot="description"
+        >Rejoignez-nous à Nantes, une ville dynamique connue pour son riche
+        patrimoine et sa communauté tech. Notre lieu de conférence offre un
+        cadre idéal pour l'apprentissage et le networking au cœur de l'Ouest de
+        la France.</span
+      >
+    </HeaderHero>
 
-        <div class="mt-12 grid md:grid-cols-2 gap-12">
-            <section class="space-y-6">
-                <div class="bg-gray-700 p-6 rounded-lg shadow-md">
-                    <h2 class="text-2xl font-bold mb-4">Adresse</h2>
-                    <div class="space-y-2 text-lg">
-                        <p class="font-semibold">Onepoint Nantes</p>
-                        <p>3 rue Lavoisier</p>
-                        <p>44300 Nantes</p>
-                        <p>France</p>
-                    </div>
-                </div>
+    <div class="max-w-7xl mx-auto px-4 py-8">
+      <div class="mt-12 grid md:grid-cols-2 gap-12">
+        <section class="space-y-6">
+          <div class="bg-gray-700 p-6 rounded-lg shadow-md">
+            <h2 class="text-2xl font-bold mb-4">Adresse</h2>
+            <div class="space-y-2 text-lg">
+              <p class="font-semibold">Onepoint Nantes</p>
+              <p>3 rue Lavoisier</p>
+              <p>44300 Nantes</p>
+              <p>France</p>
+            </div>
+          </div>
 
-                <div class="bg-gray-700 p-6 rounded-lg shadow-md">
-                    <h2 class="text-2xl font-bold mb-4">Comment s'y rendre</h2>
-                    <div class="space-y-4">
-                        <div>
-                            <h3 class="font-semibold">En transport en commun</h3>
-                            <p>La station de Tramway ligne 1 la plus proche est "Chantiers Navals".</p>
-                        </div>
-                        <div>
-                            <h3 class="font-semibold">En train</h3>
-                            <p>Depuis la gare, prenez le Tramway ligne 1 jusqu'à la station"Chantiers Navals".</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+          <div class="bg-gray-700 p-6 rounded-lg shadow-md">
+            <h2 class="text-2xl font-bold mb-4">Comment s'y rendre</h2>
+            <div class="space-y-4">
+              <div>
+                <h3 class="font-semibold">En transport en commun</h3>
+                <p>
+                  La station de Tramway ligne 1 la plus proche est "Chantiers
+                  Navals".
+                </p>
+              </div>
+              <div>
+                <h3 class="font-semibold">En train</h3>
+                <p>
+                  Depuis la gare, prenez le Tramway ligne 1 jusqu'à la
+                  station"Chantiers Navals".
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <section class="space-y-6">
-                <div id='map' class="w-full h-[400px] rounded-lg shadow-md"></div>
-                
-                <div class="bg-gray-700 p-6 rounded-lg shadow-md">
-                    <h2 class="text-2xl font-bold mb-4">À propos du quartier</h2>
-                    <p class="mb-4">Nantes est une ville dynamique connue pour sa riche histoire, son innovation technologique et ses attractions culturelles. Le lieu est situé dans un quartier d'affaires dynamique avec un accès facile aux restaurants, hôtels et attractions de la ville.</p>
-                    <p>Prenez le temps d'explorer les célèbres Machines de l'île, y compris le Grand Éléphant, ou visitez le historique Château des Ducs de Bretagne.</p>
-                </div>
-            </section>
-        </div>
-    </main>
+        <section class="space-y-6">
+          <div id="map" class="w-full h-[400px] rounded-lg shadow-md"></div>
+
+          <div class="bg-gray-700 p-6 rounded-lg shadow-md">
+            <h2 class="text-2xl font-bold mb-4">À propos du quartier</h2>
+            <p class="mb-4">
+              Nantes est une ville dynamique connue pour sa riche histoire, son
+              innovation technologique et ses attractions culturelles. Le lieu
+              est situé dans un quartier d'affaires dynamique avec un accès
+              facile aux restaurants, hôtels et attractions de la ville.
+            </p>
+            <p>
+              Prenez le temps d'explorer les célèbres Machines de l'île, y
+              compris le Grand Éléphant, ou visitez le historique Château des
+              Ducs de Bretagne.
+            </p>
+          </div>
+        </section>
+      </div>
+    </div>
+  </main>
 </Layout>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+  crossorigin=""
+/>
+<script
+  is:inline
+  src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+  crossorigin=""></script>
 
 <script>
-  import L from 'leaflet';
-  import 'leaflet/dist/leaflet.css';
+  import L from "leaflet";
+  import "leaflet/dist/leaflet.css";
 
   // Fix for the missing marker icons in Leaflet when using bundlers
-  import { icon } from 'leaflet';
-  import markerIcon2x from 'leaflet/dist/images/marker-icon-2x.png';
-  import markerIcon from 'leaflet/dist/images/marker-icon.png';
-  import markerShadow from 'leaflet/dist/images/marker-shadow.png';
+  import markerIcon2x from "leaflet/dist/images/marker-icon-2x.png";
+  import markerIcon from "leaflet/dist/images/marker-icon.png";
+  import markerShadow from "leaflet/dist/images/marker-shadow.png";
 
   // Fix Leaflet's icon paths
   L.Icon.Default.mergeOptions({
     iconUrl: markerIcon.src,
     iconRetinaUrl: markerIcon2x.src,
-    shadowUrl: markerShadow.src
+    shadowUrl: markerShadow.src,
   });
 
   // Initialize the map once the DOM is loaded
-  document.addEventListener('DOMContentLoaded', () => {
+  document.addEventListener("DOMContentLoaded", () => {
     // Create map instance
-    const map = L.map('map').setView([47.209459, -1.5719052], 11);
+    const map = L.map("map").setView([47.209459, -1.5719052], 11);
 
     // Add OpenStreetMap tile layer
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution:
+        '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
     }).addTo(map);
-    
+
     // Add a marker
     L.marker([47.209459, -1.5719052])
       .addTo(map)
-      .bindPopup('Onepoint Nantes')
+      .bindPopup("Onepoint Nantes")
       .openPopup();
   });
-</script> 
+</script>
