--- a/src/components/Agenda.astro
+++ b/src/components/Agenda.astro
@@ -45,18 +45,12 @@ const displayAsHour = (hour: string) => {
               {displayAsHour(track.data.startDate)} - {displayAsHour(track.data.endDate)}
               </time>
               {track.slug ? (
-                <div class="flex">
-                  {track.data.language === 'all' ? (
-                  <img src="/icons/france_square_icon_64.png" style="height: 24px" alt="French">
-                  <img src="/icons/united_kingdom_square_icon_64.png" style="height: 24px" alt="English">
-                  ) : (
-                    track.data.language === 'fr' ? (
-                    <img src="/icons/france_square_icon_64.png" style="height: 24px" alt="French">
-                    ) : (
-                    <img src="/icons/united_kingdom_square_icon_64.png" style="height: 24px" alt="English">
-                    )
-                  )}
-                  <a href={getRelativeLocaleUrl(Astro.currentLocale!, '/track/' + track.slug)} class="text-2xl font-bold text-primary">{track.data.name}</a>
+                <div class="flex gap-4">
+                  
+                  <a href={getRelativeLocaleUrl(Astro.currentLocale!, '/track/' + track.slug)} class="font-bold text-primary">
+                  <span class="text-base uppercase">[{track.data.language}]</span>
+                  <span class="text-2xl">{track.data.name}</span>
+                  </a>
                 </div>
                 <p class="mt-2 text-gray-300">{track.data.description}</p>
               ) : (
