--- a/src/pages/fr/agenda.astro
+++ b/src/pages/fr/agenda.astro
@@ -1,34 +1,34 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import HeaderHero from "../../components/HeaderHero.astro";
-// import AgendaComponent from "../../components/Agenda.astro";
+import AgendaComponent from "../../components/Agenda.astro";
 
-// const breaks = [
-//   {
-//     data: {
-//       name: "Pause déjeuner",
-//       startDate: "1215",
-//       endDate: "1315",
-//     },
-//     slug: undefined,
-//   },
-//   {
-//     data: {
-//       name: "Pause",
-//       startDate: "1425",
-//       endDate: "1455",
-//     },
-//     slug: undefined,
-//   },
-//   {
-//     data: {
-//       name: "Pause",
-//       startDate: "1605",
-//       endDate: "1635",
-//     },
-//     slug: undefined,
-//   },
-// ];
+ const breaks = [
+   {
+     data: {
+       name: "Pause déjeuner",
+       startDate: "1215",
+       endDate: "1315",
+     },
+     slug: undefined,
+   },
+   {
+     data: {
+       name: "Pause",
+       startDate: "1425",
+       endDate: "1455",
+     },
+     slug: undefined,
+   },
+   {
+     data: {
+       name: "Pause",
+       startDate: "1605",
+       endDate: "1635",
+     },
+     slug: undefined,
+   },
+ ];
 
 const schema = {
   "@context": "https://schema.org",
@@ -69,13 +69,15 @@ const schema = {
           target="_blank"
           class="btn btn-primary">Soumettez vos propositions</a
         >
-      </section> -->
+      </section> 
       <section class="flex flex-col items-center gap-4">
         <p class="text-center text-2xl font-bold">
           Notre appel à speakers est fermé. Programme à venir !
         </p>
       </section>
+      -->
+      <AgendaComponent breaks={breaks} />
     </section>
-    <!-- <AgendaComponent breaks={breaks} /> -->
+    
   </main>
 </Layout>
