--- a/src/pages/en/sponsors.astro
+++ b/src/pages/en/sponsors.astro
@@ -33,6 +33,15 @@ const schema = {
         </HeaderHero>
 
         <section class="max-w-screen-lg m-auto px-8 my-12">
+                <ul class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-0 bg-white rounded-lg p-8 my-8">
+                    <li>
+                        <img src="/sponsors/eezyR.png" alt="EezyR" class="w-24">
+                    </li>
+                    <li>
+                        <img src="/sponsors/house-of-angular.png" alt="House of Angular" class="w-24">
+                    </li>
+                </ul>
+
             <h2 class="text-4xl font-bold mb-6">Become a sponsor</h2>
             <p class="mb-4">We are thrilled to present our sponsorship prospectus for NG Baguette. As a sponsor, you will have the unique opportunity to connect with the French Angular community and promote your brand to a passionate audience of web developers.</p>
             <p class="mb-8">Our prospectus details the different partnership levels and associated benefits.</p>
