--- a/src/pages/fr/sponsors.astro
+++ b/src/pages/fr/sponsors.astro
@@ -31,6 +31,14 @@ const schema = {
         </HeaderHero>
 
         <section class="max-w-screen-lg m-auto px-8 my-12">
+             <ul class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-0 bg-white rounded-lg p-8 my-8">
+                    <li>
+                        <img src="/sponsors/eezyR.png" alt="EezyR" class="w-24">
+                    </li>
+                    <li>
+                        <img src="/sponsors/house-of-angular.png" alt="House of Angular" class="w-24">
+                    </li>
+                </ul>
             <h2 class="text-4xl font-bold mb-6">Devenir sponsor</h2>
             <p class="mb-4">Nous sommes ravis de vous présenter notre dossier de sponsoring pour NG Baguette. En tant que sponsor, vous aurez l'opportunité unique de vous connecter avec la communauté Angular française et de promouvoir votre marque auprès d'un public passionné de développement web.</p>
             <p class="mb-8">Notre dossier détaille les différents niveaux de partenariat et les avantages associés.</p>
