--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -27,7 +27,7 @@ import Layout from "../../layouts/Layout.astro";
           </div>
           <div class="flex-1 mt-8 mb-8 md:mb-0">
             <h2 class="text-2xl md:text-3xl font-bold mb-8">Tickets</h2>
-            <ul class="flex gap-4 items-stretch">
+            <ul class="flex flex-col md:flex-row gap-4 items-stretch">
               <li
                 class="flex-1 card bg-base-200 shadow-xl border-2 border-primary"
               >
@@ -84,6 +84,16 @@ import Layout from "../../layouts/Layout.astro";
                 </div>
               </li>
             </ul>
+
+             <h2 class="text-2xl md:text-3xl font-bold my-8">Sponsors</h2>
+             <ul class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-0 bg-white rounded-lg p-8 my-8">
+                    <li>
+                        <img src="/sponsors/eezyR.png" alt="EezyR" class="w-24">
+                    </li>
+                    <li>
+                        <img src="/sponsors/house-of-angular.png" alt="House of Angular" class="w-24">
+                    </li>
+                </ul>
             <!-- <div role="alert" class="alert mt-8">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
