--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -27,7 +27,7 @@ import Layout from "../../layouts/Layout.astro";
           </div>
           <div class="flex-1 mt-8 mb-8 md:mb-0">
             <h2 class="text-2xl md:text-3xl font-bold mb-8">Billets</h2>
-            <ul class="flex gap-4 items-stretch">
+            <ul class="flex flex-col md:flex-row gap-4 items-stretch">
               <li
                 class="flex-1 card bg-base-200 shadow-xl border-2 border-primary"
               >
@@ -53,13 +53,29 @@ import Layout from "../../layouts/Layout.astro";
                   </h3>
                   <p>Billet conférence classique</p>
                   <span class="text-3xl font-bold">30 €</span>
-                    <a
+                  <a
                     class="btn btn-primary"
                     target="_blank"
                     href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2025"
                     >Obtenir votre billet</a
                   >
                 </div>
+              </li>
+            </ul>
+
+            <h2 class="text-2xl md:text-3xl font-bold my-8">Sponsors</h2>
+            <ul
+              class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-0 bg-white rounded-lg p-8 my-8"
+            >
+              <li>
+                <img src="/sponsors/eezyR.png" alt="EezyR" class="w-24" />
+              </li>
+              <li>
+                <img
+                  src="/sponsors/house-of-angular.png"
+                  alt="House of Angular"
+                  class="w-24"
+                />
               </li>
             </ul>
             <!-- <div role="alert" class="alert mt-8">
