fix: break time

--- a/src/pages/en/agenda.astro
+++ b/src/pages/en/agenda.astro
@@ -12,22 +12,22 @@ const breaks = [
      },
      slug: undefined,
    },
-   {
-     data: {
-      name: "Break",
-       startDate: "1425",
-       endDate: "1455",
-     },
-     slug: undefined,
-   },
-   {
-     data: {
-       name: "Break",
-       startDate: "1605",
-       endDate: "1635",
+  {
+    data: {
+      name: "Pause",
+      startDate: "1420",
+      endDate: "1445",
     },
     slug: undefined,
-   },
+  },
+  {
+    data: {
+      name: "Pause",
+      startDate: "1550",
+      endDate: "1615",
+    },
+    slug: undefined,
+  },
 ];
 
 const schema = {
