feat: add takima sponsor

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -93,6 +93,13 @@ import Layout from "../../layouts/Layout.astro";
                     <li>
                         <img src="/sponsors/house-of-angular.png" alt="House of Angular" class="w-24">
                     </li>
+               <li>
+                 <img
+                     src="/sponsors/takima.png"
+                     alt="Takima"
+                     class="w-24"
+                 />
+               </li>
                 </ul>
             <!-- <div role="alert" class="alert mt-8">
               <svg
