--- a/src/pages/en/sponsors.astro
+++ b/src/pages/en/sponsors.astro
@@ -40,6 +40,13 @@ const schema = {
                     <li>
                         <img src="/sponsors/house-of-angular.png" alt="House of Angular" class="w-24">
                     </li>
+                    <li>
+                        <img
+                                src="/sponsors/takima.png"
+                                alt="Takima"
+                                class="w-24"
+                        />
+                    </li>
                 </ul>
 
             <h2 class="text-4xl font-bold mb-6">Become a sponsor</h2>
