--- a/src/pages/fr/sponsors.astro
+++ b/src/pages/fr/sponsors.astro
@@ -38,6 +38,13 @@ const schema = {
                     <li>
                         <img src="/sponsors/house-of-angular.png" alt="House of Angular" class="w-24">
                     </li>
+                 <li>
+                     <img
+                             src="/sponsors/takima.png"
+                             alt="Takima"
+                             class="w-24"
+                     />
+                 </li>
                 </ul>
             <h2 class="text-4xl font-bold mb-6">Devenir sponsor</h2>
             <p class="mb-4">Nous sommes ravis de vous présenter notre dossier de sponsoring pour NG Baguette. En tant que sponsor, vous aurez l'opportunité unique de vous connecter avec la communauté Angular française et de promouvoir votre marque auprès d'un public passionné de développement web.</p>
