--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -77,6 +77,13 @@ import Layout from "../../layouts/Layout.astro";
                   class="w-24"
                 />
               </li>
+                <li>
+                    <img
+                    src="/sponsors/takima.png"
+                    alt="Takima"
+                    class="w-24"
+                    />
+                </li>
             </ul>
             <!-- <div role="alert" class="alert mt-8">
               <svg
