--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,4 +1,6 @@
 ---
+import Partners from "../../components/Partners.astro";
+import Sponsors from "../../components/Sponsors.astro";
 import Layout from "../../layouts/Layout.astro";
 ---
 
@@ -76,7 +78,7 @@ import Layout from "../../layouts/Layout.astro";
                   <h3 class="card-title text-xl text-center">Regular Ticket</h3>
                   <p>Standard conference ticket</p>
                   <span class="text-3xl font-bold">€30</span>
-                   <button
+                  <button
                     class="btn btn-primary"
                     onclick="document.getElementById('ticket-modal').showModal()"
                     >Get your ticket</button
@@ -85,22 +87,11 @@ import Layout from "../../layouts/Layout.astro";
               </li>
             </ul>
 
-             <h2 class="text-2xl md:text-3xl font-bold my-8">Sponsors</h2>
-             <ul class="flex flex-col md:flex-row justify-evenly items-center gap-8 md:gap-0 bg-white rounded-lg p-8 my-8">
-                    <li>
-                        <img src="/sponsors/eezyR.png" alt="EezyR" class="w-24">
-                    </li>
-                    <li>
-                        <img src="/sponsors/house-of-angular.png" alt="House of Angular" class="w-24">
-                    </li>
-               <li>
-                 <img
-                     src="/sponsors/takima.png"
-                     alt="Takima"
-                     class="w-24"
-                 />
-               </li>
-                </ul>
+            <h2 class="text-2xl md:text-3xl font-bold my-8">Sponsors</h2>
+            <Sponsors />
+
+            <h2 class="text-2xl md:text-3xl font-bold my-8">Partners</h2>
+            <Partners />
             <!-- <div role="alert" class="alert mt-8">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
