feat: date de début

--- a/src/pages/en/agenda.astro
+++ b/src/pages/en/agenda.astro
@@ -6,6 +6,14 @@ import AgendaComponent from "../../components/Agenda.astro";
 const breaks = [
   {
     data: {
+      name: "Welcome",
+      startDate: "0930",
+      endDate: "1000",
+    },
+    slug: undefined,
+  },
+  {
+    data: {
       name: "Launch Break",
       startDate: "1215",
       endDate: "1310",
