--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -24,7 +24,7 @@ import Layout from "../../layouts/Layout.astro";
               Angular, réseautez avec des experts et d'autres développeurs.
             </p>
 
-            <p class="mt-4 text-2xl text-primary font-bold">24 mai 2025</p>
+            <p class="mt-4 text-2xl text-primary font-bold">24 mai 2025 - 9h30</p>
             <p class="mt-2 font-bold">Nantes, France</p>
           </div>
           <div class="flex-1 mt-8 mb-8 md:mb-0">
