--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -24,7 +24,7 @@ import Layout from "../../layouts/Layout.astro";
               and fellow developers.
             </p>
 
-            <p class="mt-4 text-2xl text-primary font-bold">May 24th, 2025</p>
+            <p class="mt-4 text-2xl text-primary font-bold">May 24th, 2025 - 9h30</p>
             <p class="mt-2 font-bold">Nantes, France</p>
           </div>
           <div class="flex-1 mt-8 mb-8 md:mb-0">
