--- a/src/pages/fr/agenda.astro
+++ b/src/pages/fr/agenda.astro
@@ -6,6 +6,14 @@ import AgendaComponent from "../../components/Agenda.astro";
 const breaks = [
   {
     data: {
+      name: "Accueil",
+      startDate: "0930",
+      endDate: "1000",
+    },
+    slug: undefined,
+  },
+  {
+    data: {
       name: "Pause déjeuner",
       startDate: "1215",
       endDate: "1310",
