feat: add partners

--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -19,4 +19,22 @@
       /></a
     >
   </li>
+  <li>
+    <a href="https://angular.love/" target="_blank"
+    ><img
+        src="/sponsors/angular-love.svg"
+        alt="Angular Love"
+        class="w-32"
+    /></a
+    >
+  </li>
+  <li>
+    <a href="https://www.meetup.com/paris-angular/" target="_blank"
+    ><img
+        src="/sponsors/paris-angular.png"
+        alt="Angular Love"
+        class="w-32"
+    /></a
+    >
+  </li>
 </ul>
