--- a/src/pages/qrcode.astro
+++ b/src/pages/qrcode.astro
@@ -18,10 +18,16 @@ const tiles = [
 <BaseLayout title="">
   <main>
     <section class="max-w-screen-lg m-auto p-8 flex flex-col gap-4">
+      <img
+        class="md:px-20 w-500 m-auto"
+        style="max-width: 50vw; max-height: 40vh"
+        src="/ng-baguette-logo.svg"
+        alt="NG Baguette Conf"
+      />
       {
         tiles.map((tile) => (
           <a class="bg-gray-700 p-6 rounded-lg shadow-md" href={tile.link_en}>
-            <h2 class="text-2xl font-bold mb-4">{tile.title}</h2>
+            <h2 class="text-2xl font-bold mb-4 text-center">{tile.title}</h2>
           </a>
         ))
       }
