feat: close sale

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -24,7 +24,9 @@ import Layout from "../../layouts/Layout.astro";
               and fellow developers.
             </p>
 
-            <p class="mt-4 text-2xl text-primary font-bold">May 24th, 2025 - 9h30</p>
+            <p class="mt-4 text-2xl text-primary font-bold">
+              May 24th, 2025 - 9h30
+            </p>
             <p class="mt-2 font-bold">Nantes, France</p>
           </div>
           <div class="flex-1 mt-8 mb-8 md:mb-0">
@@ -78,11 +80,12 @@ import Layout from "../../layouts/Layout.astro";
                   <h3 class="card-title text-xl text-center">Regular Ticket</h3>
                   <p>Standard conference ticket</p>
                   <span class="text-3xl font-bold">€30</span>
-                  <button
+                  <!-- <button
                     class="btn btn-primary"
                     onclick="document.getElementById('ticket-modal').showModal()"
                     >Get your ticket</button
-                  >
+                  > -->
+                  <p class="text-primary">Sale closed</p>
                 </div>
               </li>
             </ul>
