--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -24,7 +24,9 @@ import Layout from "../../layouts/Layout.astro";
               Angular, réseautez avec des experts et d'autres développeurs.
             </p>
 
-            <p class="mt-4 text-2xl text-primary font-bold">24 mai 2025 - 9h30</p>
+            <p class="mt-4 text-2xl text-primary font-bold">
+              24 mai 2025 - 9h30
+            </p>
             <p class="mt-2 font-bold">Nantes, France</p>
           </div>
           <div class="flex-1 mt-8 mb-8 md:mb-0">
@@ -55,12 +57,13 @@ import Layout from "../../layouts/Layout.astro";
                   </h3>
                   <p>Billet conférence classique</p>
                   <span class="text-3xl font-bold">30 €</span>
-                  <a
+                  <!-- <a
                     class="btn btn-primary"
                     target="_blank"
                     href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2025"
                     >Obtenir votre billet</a
-                  >
+                  > -->
+                  <p class="text-primary">Vente terminée</p>
                 </div>
               </li>
             </ul>
