feat: add discord link in /qrcode

--- a/src/pages/qrcode.astro
+++ b/src/pages/qrcode.astro
@@ -12,6 +12,13 @@ const tiles = [
     link_fr: "/fr",
     link_en: "/en",
   },
+  {
+    title: "Discord discussion channel",
+    link_fr:
+      "https://discord.com/channels/1076851913968058378/1375079002552799312",
+    link_en:
+      "https://discord.com/channels/1076851913968058378/1375079002552799312",
+  },
 ];
 ---
 
