feat: add slido

--- a/src/pages/qrcode.astro
+++ b/src/pages/qrcode.astro
@@ -9,8 +9,8 @@ const tiles = [
   },
   {
     title: "Feedback",
-    link_fr: "/fr",
-    link_en: "/en",
+    link_fr: "https://app.sli.do/event/gqHc8WHY5LDrRhmF8VqF5P",
+    link_en: "https://app.sli.do/event/gqHc8WHY5LDrRhmF8VqF5P",
   },
   {
     title: "Discord discussion channel",
