feat: rename title

--- a/src/pages/qrcode.astro
+++ b/src/pages/qrcode.astro
@@ -8,7 +8,7 @@ const tiles = [
     link_en: "/en/agenda",
   },
   {
-    title: "Feedback",
+    title: "Q&A",
     link_fr: "https://app.sli.do/event/gqHc8WHY5LDrRhmF8VqF5P",
     link_en: "https://app.sli.do/event/gqHc8WHY5LDrRhmF8VqF5P",
   },
