--- a/src/pages/fr/cfp.astro
+++ b/src/pages/fr/cfp.astro
@@ -2,6 +2,17 @@
 import Layout from "../../layouts/Layout.astro";
 import HeaderHero from "../../components/HeaderHero.astro";
 import { Image } from "astro:assets";
+import {
+  CFP_END_DATE,
+  CFP_LINK,
+  CFP_START_DATE,
+  eventYear,
+} from "../../consts";
+import {
+  isAfterCFPClosing,
+  isAfterCFPOpenning,
+  isAfterOpenningProgram,
+} from "../../utils";
 
 const schema = {
   "@context": "https://schema.org",
@@ -38,13 +49,15 @@ const schema = {
   <main>
     <HeaderHero>
       <span slot="title">Appel à conférenciers</span>
-      <!-- <span slot="actions">
-        <a
-          href="https://conference-hall.io/ng-baguette-conf-2025"
-          target="_blank"
-          class="btn">Soumettez vos propositions</a
-        >
-      </span> -->
+      {
+        isAfterCFPOpenning() && !isAfterCFPClosing() && (
+          <span slot="actions">
+            <a href={CFP_LINK} target="_blank" class="btn">
+              Soumettez vos propositions
+            </a>
+          </span>
+        )
+      }
     </HeaderHero>
 
     <section class="max-w-screen-lg m-auto flex flex-col items-center px-8">
@@ -75,7 +88,7 @@ const schema = {
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 20 20"
-              fill="#646EE4"
+              fill={!isAfterCFPOpenning() ? "currentColor" : "#646EE4"}
               class="h-5 w-5"
               ><path
                 fill-rule="evenodd"
@@ -84,14 +97,16 @@ const schema = {
             >
           </div>
           <div class="timeline-start md:text-end mb-10">
-            <time class="font-mono italic">3 février 2025</time>
+            <time class="font-mono italic">{CFP_START_DATE}</time>
             <div class="text-lg font-black">Ouverture du CFP</div>
             <div>Soumettez vos présentations pour la conférence</div>
-            <!-- <a
-              href="https://conference-hall.io/ng-baguette-conf-2025"
-              target="_blank"
-              class="btn btn-primary my-4">Soumettre vos présentations</a
-            > -->
+            {
+              isAfterCFPOpenning() && !isAfterCFPClosing() && (
+                <a href={CFP_LINK} target="_blank" class="btn btn-primary my-4">
+                  Soumettre vos présentations
+                </a>
+              )
+            }
           </div>
           <hr />
         </li>
@@ -101,7 +116,7 @@ const schema = {
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 20 20"
-              fill="#646EE4"
+              fill={!isAfterCFPClosing() ? "currentColor" : "#646EE4"}
               class="h-5 w-5"
               ><path
                 fill-rule="evenodd"
@@ -110,7 +125,7 @@ const schema = {
             >
           </div>
           <div class="timeline-end mb-10">
-            <time class="font-mono italic">14 mars 2025</time>
+            <time class="font-mono italic">{CFP_END_DATE}</time>
             <div class="text-lg font-black">Date limite de soumission</div>
             Dernier jour pour soumettre vos présentations
           </div>
@@ -122,7 +137,7 @@ const schema = {
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 20 20"
-              fill="#646EE4"
+              fill={!isAfterCFPClosing() ? "currentColor" : "#646EE4"}
               class="h-5 w-5"
               ><path
                 fill-rule="evenodd"
@@ -131,7 +146,7 @@ const schema = {
             >
           </div>
           <div class="timeline-start md:text-end mb-10">
-            <time class="font-mono italic">Mars 2025</time>
+            <time class="font-mono italic">Mars {eventYear}</time>
             <div class="text-lg font-black">Évaluation des propositions</div>
             Notre équipe évaluera vos propositions
           </div>
@@ -143,7 +158,7 @@ const schema = {
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 20 20"
-              fill="#646EE4"
+              fill={isAfterOpenningProgram() ? "#646EE4" : "currentColor"}
               class="h-5 w-5"
               ><path
                 fill-rule="evenodd"
@@ -152,7 +167,7 @@ const schema = {
             >
           </div>
           <div class="timeline-end mb-10">
-            <time class="font-mono italic">milieu mars 2025</time>
+            <time class="font-mono italic">milieu mars {eventYear}</time>
             <div class="text-lg font-black">Retours sur les propositions</div>
             <div>Nous vous enverrons les retours sur vos propositions</div>
           </div>
@@ -164,7 +179,7 @@ const schema = {
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 20 20"
-              fill="currentColor"
+              fill={isAfterOpenningProgram() ? "#646EE4" : "currentColor"}
               class="h-5 w-5"
               ><path
                 fill-rule="evenodd"
@@ -173,7 +188,7 @@ const schema = {
             >
           </div>
           <div class="timeline-start md:text-end mb-10">
-            <time class="font-mono italic">fin mars 2025</time>
+            <time class="font-mono italic">fin mars {eventYear}</time>
             <div class="text-lg font-black">Programme final</div>
             <div>
               Une fois que nous aurons la confirmation de tous les orateurs
